- Ask for color fit when loading a CEL file.
- Add gradients.
- Hide menu when not needed.
- Autosave state in every 1 min.
- Configurable autosave interval.


2023.03.16
- MediaManager is reduced to GFXManager to remove the dependency on BASS.DLL.
  Should switch Bass to SDL2 but that's out of this project's scope.

2023.03.15
- Sliders are visible again.
- BUG: Sliders don't receive MouseWheel event.
- Added and wired Alpha slider.
- Changed target architecture to x64.
- Changed SDL2 libraries to SDL2-for-Pascal (more up to date).

2023.03.14
- Color selector visible and works again.
- Still working under the hood.

2023.03.11
- Big rework under the hood regarding mouse events and visual components,
  so a few things are broken now:
  - Color selector is not visible.
  - Sliders are not visible. (If somehow you can invoke palette editor.)

2023.03.10
- SubMenu items insert a message into queue when clicked.
- Clicking on CEL/Load invokes the windows standard open file dialog. Browsing an
  original AAT CEL file and click open will load the file into CELImage.
  It doesn't yet color fits the loaded CEL.
- MSG_MOUSECOORDS messages are removed. They caused queue overflow because when
  a file dialog was open, but the mouse moved over drawarea, SDL accumulated the
  events and fired all at once when the dialog was closed. Coordinates are read
  from DrawArea and passed to Controls in main loop instead.
- Clicking on Picture/Clear clears MainImage to key color.
- Clicking on CEL/Release frees up CELImage. This operation is not UNDOable!
- GetCEL hides and shows MainMenu beside Controls.
- Clicking on CEL/Get invokes GetCEL tool.
- BUG: The whole fControls stopped working.

2023.03.09
- Submenu opens when hovering mouse on menu. Moving to another menu or outside
  the menu bar or submenu hides the submenu.
- Moving the mouse over the submenu moves the selection.

2023.03.08
- Using mouse wheel over the palette colors in PaletteEditor switches banks.