@@ -1,2 +1,0 @@
-mad4 BurdockPaint.data ..\data * -1
-pause
