@@ -1,0 +1,5 @@
+@echo off
+C:\lazarus\fpc\3.2.2\bin\x86_64-win64\fpc.exe -MDelphi -Scghi -CX -O3 -XX -l -vewnhibq -vm6058,5024 -Filib\x86_64-win64 -Fuunits -Fuunits\SDL2 -FuC:\lazarus\lcl\units\x86_64-win64\win32 -FuC:\lazarus\lcl\units\x86_64-win64 -FuC:\lazarus\components\freetype\lib\x86_64-win64 -FuC:\lazarus\components\lazutils\lib\x86_64-win64 -FuC:\lazarus\packager\units\x86_64-win64 -Fu. -FUlib\x86_64-win64 -FE..\_release -oBurdockPaint_x64.exe -dLCL -dLCLwin32 BurdockPaint.lpr
+C:\lazarus\fpc\3.2.2\bin\x86_64-win64\fpc.exe -Twin32 -Pi386 -MDelphi -Scghi -CX -O3 -XX -l -vewnhibq -vm6058,5024 -Filib\i386-win32 -Fuunits -Fuunits\SDL2 -FuC:\lazarus\lcl\units\i386-win32\win32 -FuC:\lazarus\lcl\units\i386-win32 -FuC:\lazarus\components\freetype\lib\i386-win32 -FuC:\lazarus\components\lazutils\lib\i386-win32 -FuC:\lazarus\packager\units\i386-win32 -Fu. -FUlib\x86_64-win64 -FE..\_release -oBurdockPaint_x86.exe -dLCL -dLCLwin32 BurdockPaint.lpr
+if exist "BurdockPaint.data" (del BurdockPaint.data)
+mad4 ..\_release\BurdockPaint.data ..\data * -1
