@@ -3,7 +3,7 @@
   <ProjectSession>
     <PathDelim Value="\"/>
     <Version Value="12"/>
-    <BuildModes Active="Debug"/>
+    <BuildModes Active="Release"/>
     <Units>
       <Unit>
         <Filename Value="BurdockPaint.lpr"/>
@@ -15,19 +15,19 @@
       <Unit>
         <Filename Value="BDPMainUnit.pas"/>
         <IsPartOfProject Value="True"/>
+        <IsVisibleTab Value="True"/>
         <EditorIndex Value="1"/>
-        <TopLine Value="59"/>
-        <CursorPos Y="85"/>
+        <TopLine Value="22"/>
+        <CursorPos X="40" Y="49"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSharedUnit.pas"/>
         <IsPartOfProject Value="True"/>
-        <IsVisibleTab Value="True"/>
         <EditorIndex Value="9"/>
-        <TopLine Value="49"/>
-        <CursorPos X="9" Y="7"/>
+        <TopLine Value="34"/>
+        <CursorPos X="32" Y="57"/>
         <UsageCount Value="200"/>
         <Loaded Value="True"/>
       </Unit>
@@ -38,7 +38,6 @@
         <TopLine Value="29"/>
         <CursorPos X="25" Y="70"/>
         <UsageCount Value="200"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPButtonUnit.pas"/>
@@ -46,7 +45,6 @@
         <EditorIndex Value="-1"/>
         <CursorPos X="15" Y="7"/>
         <UsageCount Value="200"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="BDPControlsUnit.pas"/>
@@ -63,8 +61,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="177"/>
         <CursorPos X="36" Y="379"/>
-        <UsageCount Value="197"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="198"/>
       </Unit>
       <Unit>
         <Filename Value="BDPImageUnit.pas"/>
@@ -72,8 +69,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="935"/>
         <CursorPos Y="962"/>
-        <UsageCount Value="196"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="197"/>
       </Unit>
       <Unit>
         <Filename Value="BDPDrawAreaUnit.pas"/>
@@ -81,7 +77,7 @@
         <EditorIndex Value="5"/>
         <TopLine Value="43"/>
         <CursorPos X="26" Y="76"/>
-        <UsageCount Value="188"/>
+        <UsageCount Value="189"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -90,8 +86,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="127"/>
         <CursorPos X="3" Y="149"/>
-        <UsageCount Value="186"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="187"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMessageUnit.pas"/>
@@ -99,8 +94,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="33"/>
         <CursorPos Y="66"/>
-        <UsageCount Value="175"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="176"/>
       </Unit>
       <Unit>
         <Filename Value="BDPCursorUnit.pas"/>
@@ -108,8 +102,7 @@
         <EditorIndex Value="-1"/>
         <CursorPos Y="21"/>
         <FoldState Value=" T7AC2 T3K0{yp"/>
-        <UsageCount Value="174"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="175"/>
       </Unit>
       <Unit>
         <Filename Value="BDPToolsUnit.pas"/>
@@ -117,7 +110,7 @@
         <EditorIndex Value="4"/>
         <TopLine Value="1004"/>
         <CursorPos Y="1036"/>
-        <UsageCount Value="172"/>
+        <UsageCount Value="173"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -126,7 +119,7 @@
         <EditorIndex Value="7"/>
         <TopLine Value="94"/>
         <CursorPos Y="116"/>
-        <UsageCount Value="171"/>
+        <UsageCount Value="172"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -134,7 +127,7 @@
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="17" Y="8"/>
-        <UsageCount Value="159"/>
+        <UsageCount Value="160"/>
       </Unit>
       <Unit>
         <Filename Value="BDPKeyMappingUnit.pas"/>
@@ -142,15 +135,14 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="3"/>
         <CursorPos Y="37"/>
-        <UsageCount Value="152"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="153"/>
       </Unit>
       <Unit>
         <Filename Value="BDPSplashScreenUnit.pas"/>
         <IsPartOfProject Value="True"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="17" Y="8"/>
-        <UsageCount Value="135"/>
+        <UsageCount Value="136"/>
       </Unit>
       <Unit>
         <Filename Value="BDPColorSelectorUnit.pas"/>
@@ -158,7 +150,7 @@
         <EditorIndex Value="3"/>
         <TopLine Value="16"/>
         <CursorPos X="56" Y="57"/>
-        <UsageCount Value="123"/>
+        <UsageCount Value="124"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -167,8 +159,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="132"/>
         <CursorPos Y="273"/>
-        <UsageCount Value="113"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <UsageCount Value="114"/>
       </Unit>
       <Unit>
         <Filename Value="BDPPaletteEditorUnit.pas"/>
@@ -176,7 +167,7 @@
         <EditorIndex Value="6"/>
         <TopLine Value="203"/>
         <CursorPos X="27" Y="225"/>
-        <UsageCount Value="86"/>
+        <UsageCount Value="87"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -185,7 +176,7 @@
         <EditorIndex Value="-1"/>
         <TopLine Value="38"/>
         <CursorPos X="53" Y="63"/>
-        <UsageCount Value="78"/>
+        <UsageCount Value="79"/>
       </Unit>
       <Unit>
         <Filename Value="BDPMenuUnit.pas"/>
@@ -193,7 +184,7 @@
         <EditorIndex Value="8"/>
         <TopLine Value="139"/>
         <CursorPos X="32" Y="176"/>
-        <UsageCount Value="51"/>
+        <UsageCount Value="52"/>
         <Loaded Value="True"/>
       </Unit>
       <Unit>
@@ -203,7 +194,6 @@
         <CursorPos X="3" Y="68"/>
         <FoldState Value=" T3jD06031N"/>
         <UsageCount Value="28"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\mk_sdl2.pas"/>
@@ -211,7 +201,6 @@
         <TopLine Value="280"/>
         <CursorPos Y="302"/>
         <UsageCount Value="13"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\ARGBImageUnit.pas"/>
@@ -219,7 +208,6 @@
         <TopLine Value="457"/>
         <CursorPos X="17" Y="482"/>
         <UsageCount Value="7"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\GFXManagerUnit.pas"/>
@@ -227,7 +215,6 @@
         <TopLine Value="11"/>
         <CursorPos X="18" Y="83"/>
         <UsageCount Value="10"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\FontList2Unit.pas"/>
@@ -235,14 +222,12 @@
         <TopLine Value="71"/>
         <CursorPos Y="99"/>
         <UsageCount Value="5"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\MusicListUnit.pas"/>
         <EditorIndex Value="-1"/>
         <CursorPos Y="2"/>
         <UsageCount Value="3"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\MKMouse2.pas"/>
@@ -257,7 +242,6 @@
         <TopLine Value="45"/>
         <CursorPos Y="48"/>
         <UsageCount Value="9"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc_ARGBButton.pas"/>
@@ -265,7 +249,6 @@
         <TopLine Value="48"/>
         <CursorPos X="29" Y="59"/>
         <UsageCount Value="9"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\MKINIFile.pas"/>
@@ -273,7 +256,6 @@
         <TopLine Value="119"/>
         <CursorPos Y="142"/>
         <UsageCount Value="1"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc2_Container.pas"/>
@@ -287,7 +269,6 @@
         <TopLine Value="174"/>
         <CursorPos X="17" Y="184"/>
         <UsageCount Value="10"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\MyZStreamUnit.pas"/>
@@ -295,7 +276,6 @@
         <TopLine Value="62"/>
         <CursorPos X="9" Y="95"/>
         <UsageCount Value="4"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="C:\lazarus\fpc\3.2.2\source\packages\paszlib\src\zstream.pp"/>
@@ -310,14 +290,12 @@
         <EditorIndex Value="-1"/>
         <CursorPos X="3" Y="28"/>
         <UsageCount Value="1"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\Mask2Unit.pas"/>
         <EditorIndex Value="-1"/>
         <CursorPos X="22" Y="6"/>
         <UsageCount Value="2"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\ARGBImagePNGReaderUnit.pas"/>
@@ -325,7 +303,6 @@
         <TopLine Value="18"/>
         <CursorPos X="40" Y="40"/>
         <UsageCount Value="4"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\ARGBImagePNGWriterUnit.pas"/>
@@ -333,7 +310,6 @@
         <TopLine Value="20"/>
         <CursorPos X="51" Y="42"/>
         <UsageCount Value="4"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\Logger.pas"/>
@@ -341,7 +317,6 @@
         <TopLine Value="314"/>
         <CursorPos X="23" Y="419"/>
         <UsageCount Value="6"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\Lists.pas"/>
@@ -349,14 +324,13 @@
         <TopLine Value="362"/>
         <CursorPos Y="389"/>
         <UsageCount Value="4"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="C:\lazarus\fpc\3.2.2\source\rtl\objpas\fgl.pp"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="1112"/>
-        <CursorPos X="24" Y="1134"/>
-        <UsageCount Value="4"/>
+        <TopLine Value="1072"/>
+        <CursorPos X="62" Y="1092"/>
+        <UsageCount Value="11"/>
       </Unit>
       <Unit>
         <Filename Value="units\MKStream.pas"/>
@@ -364,7 +338,6 @@
         <TopLine Value="281"/>
         <CursorPos X="23" Y="296"/>
         <UsageCount Value="10"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\MKToolbox.pas"/>
@@ -372,7 +345,6 @@
         <TopLine Value="217"/>
         <CursorPos X="25" Y="249"/>
         <UsageCount Value="6"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc_SliderLogic.pas"/>
@@ -381,15 +353,13 @@
         <CursorPos Y="289"/>
         <FoldState Value=" T3l70H92A PjdlZ0-"/>
         <UsageCount Value="14"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\MAD4MidLevelUnit.pas"/>
         <EditorIndex Value="-1"/>
-        <TopLine Value="176"/>
-        <CursorPos X="36" Y="198"/>
-        <UsageCount Value="7"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+        <TopLine Value="200"/>
+        <CursorPos X="3" Y="217"/>
+        <UsageCount Value="10"/>
       </Unit>
       <Unit>
         <Filename Value="C:\lazarus\fpc\3.2.2\source\packages\fv\src\dialogs.pas"/>
@@ -411,7 +381,6 @@
         <TopLine Value="60"/>
         <CursorPos X="3" Y="81"/>
         <UsageCount Value="12"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc2_Button.pas"/>
@@ -419,7 +388,6 @@
         <TopLine Value="34"/>
         <CursorPos X="23" Y="54"/>
         <UsageCount Value="10"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc2_ButtonLogic.pas"/>
@@ -427,7 +395,6 @@
         <TopLine Value="40"/>
         <CursorPos X="3" Y="64"/>
         <UsageCount Value="10"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc2_Slider.pas"/>
@@ -435,7 +402,6 @@
         <TopLine Value="75"/>
         <CursorPos Y="112"/>
         <UsageCount Value="11"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
       </Unit>
       <Unit>
         <Filename Value="units\vcc2_SliderLogic.pas"/>
@@ -443,7 +409,20 @@
         <TopLine Value="53"/>
         <CursorPos X="51" Y="98"/>
         <UsageCount Value="11"/>
-        <DefaultSyntaxHighlighter Value="Delphi"/>
+      </Unit>
+      <Unit>
+        <Filename Value="units\SDL2\sdl2.pas"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="115"/>
+        <CursorPos X="30" Y="130"/>
+        <UsageCount Value="10"/>
+      </Unit>
+      <Unit>
+        <Filename Value="units\MAD4LowLevelUnit.pas"/>
+        <EditorIndex Value="-1"/>
+        <TopLine Value="193"/>
+        <CursorPos X="3" Y="228"/>
+        <UsageCount Value="10"/>
       </Unit>
     </Units>
     <JumpHistory HistoryIndex="17">
@@ -516,8 +495,8 @@
         <Caret Line="41" Column="23"/>
       </Position>
       <Position>
-        <Filename Value="BDPSharedUnit.pas"/>
-        <Caret Line="7" Column="9"/>
+        <Filename Value="BDPMainUnit.pas"/>
+        <Caret Line="85" TopLine="22"/>
       </Position>
     </JumpHistory>
     <RunParams>
