@@ -1,1 +1,0 @@
-copy /b BurdockPaint.exe+BurdockPaint.data ..\_release\BurdockPaint.exe
