@@ -13,6 +13,10 @@ Todo:
 2023.03.16
 - MediaManager is reduced to GFXManager to remove the dependency on BASS.DLL.
   Should switch Bass to SDL2 but that's out of this project's scope.
+- BuildRelease.bat added. It builds release executables (both x86 and x64) and data file
+  into ..\_release.
+- SDL2 dll names are changed to allow both dlls to be in the same folder.
+  Source modified to pick the correct dll.
 
 2023.03.15
 - Sliders are visible again.
